# jobhunt-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/jobhunt/: config.py  models.py  storage.py
src/jobhunt/sources/: adzuna.py  jsearch.py
