[project]
name = "jobhunt-pipeline"
version = "0.1.0"
description = "Multi-source job aggregator with scoring and a Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Darin Pavlov", email = "pavlovdarin01@gmail.com" }
]
license = "MIT"
keywords = ["jobs", "aggregator", "etl", "data-pipeline"]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "duckdb>=1.0",
    "scikit-learn>=1.5",
    "streamlit>=1.36",
    "structlog>=24.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
jobhunt = "jobhunt.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobhunt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
